<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:layout_marginVertical="16dp"
    android:orientation="vertical">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal">

        <ImageView
            android:id="@+id/user_avatar"
            android:layout_width="30dp"
            android:layout_height="30dp"
            tools:src="@tools:sample/avatars" />

        <TextView
            android:id="@+id/user_name"
            style="@style/Text.Regular"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_gravity="center_vertical"
            android:layout_marginStart="8dp"
            tools:text="@string/name" />
    </LinearLayout>

    <TextView
        android:id="@+id/user_review_date"
        style="@style/Text.Regular"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center_vertical"
        android:layout_marginTop="8dp"
        android:drawablePadding="4dp"
        app:drawableStartCompat="@drawable/baseline_star_12"
        tools:text="@string/star_rate" />

    <com.webtoonscorp.android.readmore.ReadMoreTextView
        android:id="@+id/user_review"
        style="@style/Text.Regular"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center_vertical"
        android:layout_marginTop="4dp"
        android:background="?selectableItemBackground"
        app:readMoreMaxLines="4"
        app:readMoreOverflow="ellipsis"
        tools:text="@string/user_review" />

</LinearLayout>